--- a/client/scripts/common/views/home.html
+++ b/client/scripts/common/views/home.html
@@ -1,17 +1,21 @@
-<ion-pane>
-    <ion-header-bar class='bar-positive'>
+<ion-view name="home">
+
+    <ion-header-bar class='bar-assertive'>
         <h1 class="title">Rotten Tomatoes</h1>
     </ion-header-bar>
     <ion-content>
+        <br>
+        <br>
         <div class="list">
             <label class="item item-input">
-                <input type="text" placeholder="Bond, 2012, nolan,...." ng-model="moviesCtrl.searchString">
+                <input type="text" placeholder="Bond, 2012, nolan,...." ng-model="
+   searchString">
             </label>
 
-            <label class="item item-input" >
-                <button class="button button-block" ng-click="moviesCtrl.movieListQuery()">Search</button>
+            <label class="item item-input">
+                <button class="button button-block" ng-click="moviesCtrl.getMovies(searchString)">Search</button>
             </label>
-            {{moviesCtrl.searchString}}
+            {{searchString}}
         </div>
     </ion-content>
-</ion-pane>
+</ion-view>
