feat(app): Link movieCtrl to input text

--- a/client/scripts/common/views/home.html
+++ b/client/scripts/common/views/home.html
@@ -9,7 +9,7 @@
         <div class="list">
             <label class="item item-input">
                 <input type="text" placeholder="Bond, 2012, nolan,...." ng-model="
-   searchString">
+   moviesCtrl.searchString">
             </label>
 
             <label class="item item-input">
