--- a/client/scripts/common/views/home.html
+++ b/client/scripts/common/views/home.html
@@ -1,8 +1,7 @@
-<ion-view name="home">
-
-    <ion-header-bar class='bar-assertive'>
-        <h1 class="title">Rotten Tomatoes</h1>
-    </ion-header-bar>
+<ion-header-bar class='bar-assertive'>
+    <h1 class="title">Rotten Tomatoes</h1>
+</ion-header-bar>
+<ion-view>
     <ion-content>
         <div class="list">
             <label class="item item-input"> <span class="input-label">Start typing </span>
@@ -14,11 +13,11 @@
                 <button class="button button-block" ng-click="moviesCtrl.getMovies(searchString)">Search</button>
             </label>
         </div>
-
         <ion-list>
         <ion-item class="item-thumbnail-left" ng-repeat="movie in moviesCtrl.movieList">
-        <img ng-src={{movie.posters.thumbnail}}>
-        <h2>{{movie.title}}</h2>
+        <img ui-sref='home.movie({movieId:movie.id})' ng-src={{movie.posters.thumbnail}}>
+        <h2>{{movie.title}} {{movie.id}} </h2>
+
         </ion-item>
         </ion-list>
     </ion-content>
