--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -1,5 +1,4 @@
 @import "../../node_modules/ionic-sdk/scss/ionic.scss";
 @import "../../node_modules/font-awesome/scss/font-awesome.scss";
   
-
-
+.scroll{height: 100%;}
