--- a/client/scripts/common/views/search.html
+++ b/client/scripts/common/views/search.html
@@ -1,4 +1,4 @@
-<ion-view title="Rotten Tomatoes Search">
+<ion-view>
 <ion-content>
     <div class="list">
         <div class="item item-input-inset">
